add .js and made changes in index file

--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Rajib Dab</title>
+        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+	    <meta property="og:title" content="Rajib Dab" />
+	    <meta property="og:image" content="https://razibit.github.io/img/rajib_dab.jpg" />
+	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	    <meta name="author" content="Rajib Dab">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="shortcut icon" type="image/png" href="img/icon.ico"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Academic Personal Website</title>
@@ -17,24 +25,35 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Academic Personal Website</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <div class="logo">
+                <a href="index.html">Rajib Dab</a>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html" class="nav-link">Home</a></li>
+                    <li><a href="projects.html" class="nav-link">Projects</a></li>
+                    <li><a href="publications.html" class="nav-link">Publications</a></li>
+                    <li><a href="blog.html" class="nav-link">Blog</a></li>
+                    <li><a href="cv.html" class="nav-link">CV</a></li>
+                    <li><a href="experience.html" class="nav-link">Experience</a></li>
+                    <li><a href="education.html" class="nav-link">Education</a></li>
+                    <li><a href="awards.html" class="nav-link">Honors & Awards</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
+        <!-- Content for Home page -->
         <section>
-            <h2>About Me</h2>
-            <p>Welcome to my academic personal website! Here you'll find information about my research interests, projects, and achievements.</p>
+            <h1>Welcome to My Academic Personal Website</h1>
+            <p>This is the home page where you can find information about my research interests, projects, and more.</p>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Rajib dab. All rights reserved.</p>
+        <p>&copy; 2024 Rajib Dab. All rights reserved.</p>
     </footer>
     <script src="js/scripts.js"></script>
+</body>
 </body>
 </html>
