updated stylesheet & index file

--- a/index.html
+++ b/index.html
@@ -23,35 +23,80 @@
     </script>
     <link rel="stylesheet" href="css/styles.css">
 </head>
+
+
+
 <body>
     <header>
         <div class="container">
             <div class="logo">
-                <a href="index.html">Rajib Dab</a>
+                <a href="/">Rajib Dab/ রাজিব দেব</a>
             </div>
             <nav>
                 <ul>
-                    <li><a href="index.html" class="nav-link">Home</a></li>
-                    <li><a href="projects.html" class="nav-link">Projects</a></li>
-                    <li><a href="publications.html" class="nav-link">Publications</a></li>
-                    <li><a href="blog.html" class="nav-link">Blog</a></li>
-                    <li><a href="cv.html" class="nav-link">CV</a></li>
-                    <li><a href="experience.html" class="nav-link">Experience</a></li>
-                    <li><a href="education.html" class="nav-link">Education</a></li>
-                    <li><a href="awards.html" class="nav-link">Honors & Awards</a></li>
+                    <li><a href="index" class="nav-link">Home</a></li>
+                    <li><a href="projects" class="nav-link">Projects</a></li>
+                    <li><a href="publications" class="nav-link">Publications</a></li>
+                    <li><a href="blog" class="nav-link">Blog</a></li>
+                    <li><a href="cv" class="nav-link">CV</a></li>
+                    <li><a href="experience" class="nav-link">Experience</a></li>
+                    <li><a href="education" class="nav-link">Education</a></li>
+                    <li><a href="awards" class="nav-link">Honors & Awards</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-    <main>
-        <!-- Content for Home page -->
-        <section>
-            <h1>Welcome to My Academic Personal Website</h1>
-            <p>This is the home page where you can find information about my research interests, projects, and more.</p>
-        </section>
+
+    <p></p>  <!--temporary method of spacing-->
+
+    <main class="container">
+        <div class="left-sidebar">
+            <img src="images/rajib_dab.jpg" alt="Rajib Dab" class="profile-pic">
+            <h2>Rajib Dab</h2>
+            <p>Student<br>Department of Computer Science & Engineering<br>Metropolitan University Bangladesh</p>
+            <p>Email: rdb99 (at) gmail (dot) com</p>
+            <p><span class="icon-location"></span> Sylhet, Bangladesh</p>
+            <div class="social-links">
+                <a href="https://linkedin.com/in/yourprofile" class="social-icon">[In]</a>
+                <a href="https://x.com/yourprofile" class="social-icon">[X]</a>
+                <a href="https://github.com/yourprofile" class="social-icon">[git]</a>
+                <a href="https://researchgate.net/profile/yourprofile" class="social-icon">[researchgate]</a>
+                <a href="https://dblp.org/pers/hd/yourprofile" class="social-icon">[dblp]</a>
+                <a href="https://orcid.org/yourprofile" class="social-icon">[ORCID]</a>
+            </div>
+            <div class="section">
+                <h3>Research Interest</h3>
+                <p>Natural Language Processing</p>
+                <p>Computer Vision</p>
+            </div>
+            <div class="section">
+                <h3>Spotlight!</h3>
+                <p>1. Started working on AI Financial Advisor <a href="/Projects">SenFAI</a>.</p>
+                <p>2. I will be presenting my project on Kaggle AI competition this September.</p>
+            </div>
+        </div>
+
+        <div class="main-content">
+            <p>
+                Rajib Dab is a Bachelor's student in the Department of Computer Science and Engineering at Metropolitan University, Bangladesh.
+            </p>
+            <h3>Recent News</h3>
+            <ul class="news-list">
+                <li>
+                    <span class="news-date">June 2024</span> Started working on AI Financial Advisor <a href="/Projects">SenFAI</a>.
+                </li>
+                <li>
+                    <span class="news-date">May 2024</span> I will be presenting my project on Kaggle AI competition this September.
+                </li>
+            </ul>
+            <p>See older news <a href="/news">here</a>.</p>
+        </div>
     </main>
+
+    <!-- footer -->
+
     <footer>
-        <p>&copy; 2024 Rajib Dab. All rights reserved.</p>
+        <p>&copy; 2024 Rajib Dab | Last Update: July 2024</p>
     </footer>
     <script src="js/scripts.js"></script>
 </body>
