--- a/index.html
+++ b/index.html
@@ -47,23 +47,37 @@
         </div>
     </header>
 
-    <p></p>  <!--temporary method of spacing-->
+      <!--temporary method of spacing-->
 
     <main class="container">
         <div class="left-sidebar">
             <img src="images/rajib_dab.jpg" alt="Rajib Dab" class="profile-pic">
             <h2>Rajib Dab</h2>
             <p>Student<br>Department of Computer Science & Engineering<br>Metropolitan University Bangladesh</p>
-            <p>Email: rdb99 (at) gmail (dot) com</p>
-            <p><span class="icon-location"></span> Sylhet, Bangladesh</p>
-            <div class="social-links">
-                <a href="https://linkedin.com/in/yourprofile" class="social-icon">[In]</a>
-                <a href="https://x.com/yourprofile" class="social-icon">[X]</a>
-                <a href="https://github.com/yourprofile" class="social-icon">[git]</a>
-                <a href="https://researchgate.net/profile/yourprofile" class="social-icon">[researchgate]</a>
-                <a href="https://dblp.org/pers/hd/yourprofile" class="social-icon">[dblp]</a>
-                <a href="https://orcid.org/yourprofile" class="social-icon">[ORCID]</a>
-            </div>
+
+            <p><img src="/assets/icons/social_icons/email.png" alt="Email Icon" class="icon"> rdb99 (at) gmail (dot) com</p>
+            <p><img src="/assets/icons/social_icons/location.png" alt="Location Icon" class="icon"> Sylhet, Bangladesh</p>
+    <div class="social-links">
+        <a href="https://linkedin.com/in/yourprofile" class="social-icon">
+            <img src="/assets/icons/social_icons/linkedin.png" alt="LinkedIn Icon" class="icon">
+        </a>
+        <a href="https://x.com/yourprofile" class="social-icon">
+            <img src="/assets/icons/social_icons/x.png" alt="X Icon" class="icon">
+        </a>
+        <a href="https://github.com/yourprofile" class="social-icon">
+            <img src="/assets/icons/social_icons/github.png" alt="GitHub Icon" class="icon">
+        </a>
+        <a href="https://researchgate.net/profile/yourprofile" class="social-icon">
+            <img src="/assets/icons/social_icons/researchgate.png" alt="ResearchGate Icon" class="icon">
+        </a>
+        <a href="https://dblp.org/pers/hd/yourprofile" class="social-icon">
+            <img src="/assets/icons/social_icons/dblp.png" alt="DBLP Icon" class="icon">
+        </a>
+        <a href="https://orcid.org/yourprofile" class="social-icon">
+            <img src="/assets/icons/social_icons/orcid.png" alt="ORCID Icon" class="icon">
+        </a>
+    </div>
+
             <div class="section">
                 <h3>Research Interest</h3>
                 <p>Natural Language Processing</p>
