added /education page

--- a/education/index.html
+++ b/education/index.html
@@ -21,7 +21,7 @@
 
      gtag('config', 'G-QCR8R9EEF9');
     </script>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/razibit.github.io/css/styles.css">
 </head>
 
 
@@ -51,30 +51,30 @@
 
     <main class="container">
         <div class="left-sidebar">
-            <img src="images/rajib_dab.jpg" alt="Rajib Dab" class="profile-pic">
+            <img src="/razibit.github.io/images/rajib_dab.jpg" alt="Rajib Dab" class="profile-pic">
             <h2>Rajib Dab</h2>
             <p>Student<br>Department of Computer Science & Engineering<br>Metropolitan University Bangladesh</p>
 
-            <p><img src="/assets/icons/social_icons/email.png" alt="Email Icon" class="icon"> rdb99 (at) gmail (dot) com</p>
-            <p><img src="/assets/icons/social_icons/location.png" alt="Location Icon" class="icon"> Sylhet, Bangladesh</p>
+            <p><img src="/razibit.github.io/assets/icons/social_icons/email.png" alt="Email Icon" class="icon"> rdb99 (at) gmail (dot) com</p>
+            <p><img src="/razibit.github.io/assets/icons/social_icons/location.png" alt="Location Icon" class="icon"> Sylhet, Bangladesh</p>
     <div class="social-links">
         <a href="https://linkedin.com/in/rajibdab" class="social-icon">
-            <img src="/assets/icons/social_icons/linkedin.png" alt="LinkedIn Icon" class="icon">
+            <img src="/razibit.github.io/assets/icons/social_icons/linkedin.png" alt="LinkedIn Icon" class="icon">
         </a>
         <a href="https://x.com/razibit" class="social-icon">
-            <img src="/assets/icons/social_icons/x.png" alt="X Icon" class="icon">
+            <img src="/razibit.github.io/assets/icons/social_icons/x.png" alt="X Icon" class="icon">
         </a>
         <a href="https://github.com/razibit" class="social-icon">
-            <img src="/assets/icons/social_icons/github.png" alt="GitHub Icon" class="icon">
+            <img src="/razibit.github.io/assets/icons/social_icons/github.png" alt="GitHub Icon" class="icon">
         </a>
         <a href="https://researchgate.net/profile/yourprofile" class="social-icon">
-            <img src="/assets/icons/social_icons/researchgate.png" alt="ResearchGate Icon" class="icon">
+            <img src="/razibit.github.io/assets/icons/social_icons/researchgate.png" alt="ResearchGate Icon" class="icon">
         </a>
         <a href="https://dblp.org/pers/hd/yourprofile" class="social-icon">
-            <img src="/assets/icons/social_icons/dblp.png" alt="DBLP Icon" class="icon">
+            <img src="/razibit.github.io/assets/icons/social_icons/dblp.png" alt="DBLP Icon" class="icon">
         </a>
         <a href="https://orcid.org/yourprofile" class="social-icon">
-            <img src="/assets/icons/social_icons/orcid.png" alt="ORCID Icon" class="icon">
+            <img src="/razibit.github.io/assets/icons/social_icons/orcid.png" alt="ORCID Icon" class="icon">
         </a>
     </div>
 
@@ -91,20 +91,17 @@
         </div>
 
         <div class="main-content">
-            <p>
-                Rajib Dab is a Bachelor's student in the Department of Computer Science and Engineering at Metropolitan University, Bangladesh.
-            </p>
-            <h3>Recent News</h3>
-            <ul class="news-list">
-                <li>
-                    <span class="news-date">June 2024</span> Started working on AI Financial Advisor <a href="/Projects">SenFAI</a>.
-                </li>
-                <li>
-                    <span class="news-date">May 2024</span> I will be presenting my project on Kaggle AI competition this September.
-                </li>
-            </ul>
-            <p>See older news <a href="/news">here</a>.</p>
+            <h1>Education</h1>
+            <div class="education-item">
+                <img src="/razibit.github.io/images/Metropolitan_university.png" alt="Metropolitan University Bangladesh" class="education-icon">
+                <div class="education-details">
+                    <h2>Metropolitan University Bangladesh</h2>
+                    <p>BS in Computer Science [Jan, 2023 - Dec, 2026]</p>
+                    <p>CGPA: <b>3.74</b> out of 4.00 <a href="/files/bachelors.pdf">(Transcript)</a></p>
+                </div>
+            </div>
         </div>
+        
     </main>
 
     <!-- footer -->
