modified js, css & index files

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="index" class="nav-link">Home</a></li>
+                    <li><a href="https://razibit.github.io" class="nav-link">Home</a></li>
                     <li><a href="projects" class="nav-link">Projects</a></li>
                     <li><a href="publications" class="nav-link">Publications</a></li>
                     <li><a href="blog" class="nav-link">Blog</a></li>
@@ -96,14 +96,38 @@
             </p>
             <h3>Recent News</h3>
             <ul class="news-list">
-                <li>
-                    <span class="news-date">June 2024</span> Started working on AI Financial Advisor <a href="/Projects">SenFAI</a>.
+                <li class="news-year">2024</li>
+                <li class="news-item"> <!-- Add 'news-item' class to each list item -->
+                    <span class="news-date">[May 2024]</span> Started working on AI Financial Advisor <a href="/Projects">SenFAI</a>.
                 </li>
-                <li>
-                    <span class="news-date">May 2024</span> I will be presenting my project on Kaggle AI competition this September.
+                <li class="news-item">
+                    <span class="news-date">[June 2024]</span> I will be presenting my project on Kaggle AI competition this September.
                 </li>
+                <li class="news-item"> <!-- Example of additional news item -->
+                    <span class="news-date">[July 2024]</span> Submitted a paper to NeurIPS.
+                </li>
+                <li class="news-item">
+                    <span class="news-date">[August 2024]</span> Invited to speak at a conference.
+                </li>
+                <li class="news-item">
+                    <span class="news-date">[September 2024]</span> Published a new article on Medium.
+                </li>
+                <li class="news-item">
+                    <span class="news-date">[September 2024]</span> Published a new article on Medium.
+                </li>
+                <li class="news-item">
+                    <span class="news-date">[September 2024]</span> Published a new article on Medium.
+                </li>
+                <!-- Add more news items for 2024 as needed -->
+        
+                <li class="news-year">2023</li>
+                <li class="news-item">
+                    <span class="news-date">[September 2023]</span> Published a new article on Medium.
+                </li>
+                <!-- Add more news items for 2023 as needed -->
             </ul>
-            <p>See older news <a href="/news">here</a>.</p>
+            <p class="full-news-toggle"><a href="#" id="full-news-toggle"><i>[Full list of news]</i></a></p>
+        </div>
         </div>
     </main>
 
