--- a/education/index.html
+++ b/education/index.html
@@ -34,14 +34,14 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="index" class="nav-link">Home</a></li>
-                    <li><a href="projects" class="nav-link">Projects</a></li>
-                    <li><a href="publications" class="nav-link">Publications</a></li>
-                    <li><a href="blog" class="nav-link">Blog</a></li>
-                    <li><a href="cv" class="nav-link">CV</a></li>
-                    <li><a href="experience" class="nav-link">Experience</a></li>
-                    <li><a href="education" class="nav-link">Education</a></li>
-                    <li><a href="awards" class="nav-link">Honors & Awards</a></li>
+                    <li><a href="https://razibit.github.io" class="nav-link">Home</a></li>
+                    <li><a href="https://razibit.github.io/projects" class="nav-link">Projects</a></li>
+                    <li><a href="https://razibit.github.io/publications" class="nav-link">Publications</a></li>
+                    <li><a href="https://razibit.github.io/blog" class="nav-link">Blog</a></li>
+                    <li><a href="https://razibit.github.io/cv" class="nav-link">CV</a></li>
+                    <li><a href="https://razibit.github.io/experience" class="nav-link">Experience</a></li>
+                    <li><a href="https://razibit.github.io/education" class="nav-link">Education</a></li>
+                    <li><a href="https://razibit.github.io/awards" class="nav-link">Honors & Awards</a></li>
                 </ul>
             </nav>
         </div>
@@ -109,6 +109,6 @@
     <footer>
         <p>&copy; 2024 Rajib Dab | Last Update: July 2024</p>
     </footer>
-    <script src="js/scripts.js"></script>
+    <script src="https://razibit.github.io/js/scripts.js"></script>
 </body>
 </html>
