modifed blog page

--- a/cv/index.html
+++ b/cv/index.html
@@ -106,3 +106,10 @@
     <script src="https://razibit.github.io/js/scripts.js"></script>
 </body>
 </html>
+
+<!--always copy this file(/cv/index.html) to get empty right-sidebar/80% part; consider it as a template for every pages except homepage-->
+<!--Do not copy the razibit.github.io/index.html file to get empty right-sidebar, that index.html comes with many complications, which take huge amount of time to start the actual work with-->
+
+<!--For more understanding of the instructions above-->
+<!-- Use this file (/cv/index.html) as a template for creating pages with an empty right sidebar (80% section). This serves as a clean starting point for pages other than the homepage. -->
+<!-- Avoid using razibit.github.io/index.html for an empty right sidebar layout, as it contains additional elements and complexities that require significant time to adjust. -->
