--- a/cv/index.html
+++ b/cv/index.html
@@ -92,7 +92,8 @@
 
         <div class="main-content">
             <!--Main Content area start-->
-            <p>Working on it.</p>
+            <h2>Curriculum Vitae</h2>
+            <iframe src="https://drive.google.com/file/d/14Areyac8jjDN0TnGlGf1w_mcF47nxkhF/view?usp=sharing" width="100%" height="600px"></iframe>
             <!--Main Content area stop-->
         </div>
         
