--- a/cv/index.html
+++ b/cv/index.html
@@ -93,7 +93,9 @@
         <div class="main-content">
             <!--Main Content area start-->
             <h2>Curriculum Vitae</h2>
-            <iframe src="https://drive.google.com/file/d/14Areyac8jjDN0TnGlGf1w_mcF47nxkhF/view?usp=sharing" width="100%" height="600px"></iframe>
+            <!--<iframe src="https://drive.google.com/file/d/14Areyac8jjDN0TnGlGf1w_mcF47nxkhF/view?usp=sharing" width="100%" height="600px"></iframe>-->
+            <iframe src="https://drive.google.com/file/d/1uY6zcHM_F8nOTFZABGyr6A-f85a8cb2Y/preview" class="gde-frame" style="width:100%; height:500px; border: none;" scrolling="yes">
+            </iframe>
             <!--Main Content area stop-->
         </div>
         
