updated all index files

--- a/index.html
+++ b/index.html
@@ -8,20 +8,22 @@
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="author" content="Rajib Dab">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="shortcut icon" type="image/png" href="img/icon.ico"/>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Academic Personal Website</title>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QCR8R9EEF9"></script>
-    <script>
-     window.dataLayer = window.dataLayer || [];
-     function gtag(){dataLayer.push(arguments);}
-     gtag('js', new Date());
+        <link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="/assets/icons/favicon.ico" type="image/x-icon">
 
-     gtag('config', 'G-QCR8R9EEF9');
-    </script>
-    <link rel="stylesheet" href="css/styles.css">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>My Academic Personal Website</title>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-QCR8R9EEF9"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-QCR8R9EEF9');
+        </script>
+        <link rel="stylesheet" href="css/styles.css">
 </head>
 
 
@@ -157,7 +159,7 @@
     <!-- footer -->
 
     <footer>
-        <p>&copy; 2024 Rajib Dab | Last Update: July 2024</p>
+        <p>&copy; 2024 Rajib Dab | Last Update: August 2024</p>
     </footer>
     <script src="js/scripts.js"></script>
 </body>
