--- a/publications/index.html
+++ b/publications/index.html
@@ -100,7 +100,7 @@
         <!--Add Conference #01 publications here | START -->
         <div class="publication-item">
             <div class="thumbnail">
-                <img src="/razibit.github.io/blog/publications.jpg" alt="Publication Thumbnail">
+                <img src="https://razibit.github.io/publications/images/publications.jpg" alt="Publication Thumbnail">
             </div>
             <div class="publication-details">
                 <div class="conference-name">ICPE'24</div>
@@ -128,7 +128,7 @@
         <!--Add Conference #02 publications here | START -->
         <div class="publication-item">
             <div class="thumbnail">
-                <img src="/razibit.github.io/blog/publications.jpg" alt="Publication Thumbnail">
+                <img src="https://razibit.github.io/publications/images/publications.jpg" alt="Publication Thumbnail">
             </div>
             <div class="publication-details">
                 <div class="conference-name">ICPE'24</div>
@@ -157,7 +157,7 @@
         <!--Add Journal #01 publications here | START -->
         <div class="publication-item">
             <div class="thumbnail">
-                <img src="/razibit.github.io/blog/publications.jpg" alt="Publication Thumbnail">
+                <img src="https://razibit.github.io/publications/images/publications.jpg" alt="Publication Thumbnail">
             </div>
             <div class="publication-details">
                 <div class="conference-name">ICPE'24</div>
