--- a/cv/index.html
+++ b/cv/index.html
@@ -6,6 +6,7 @@
 	    <meta property="og:title" content="Rajib Dab" />
 	    <meta property="og:image" content="https://razibit.github.io/img/rajib_dab.jpg" />
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <link href="https://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet" type="text/css">
 	    <meta name="author" content="Rajib Dab">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
