--- a/index.html
+++ b/index.html
@@ -102,55 +102,55 @@
             <ul class="news-list">
                 <li class="news-year">2024</li>
                 <li class="news-item"> <!-- Add 'news-item' class to each list item -->
-                    <span class="news-date">[May 2024]</span> Started working on AI Financial Advisor <a href="/Projects">SenFAI</a>.
+                    <span class="news-date">May 2024</span> Started working on AI Financial Advisor <a href="/Projects">SenFAI</a>.
                 </li>
                 <li class="news-item">
-                    <span class="news-date">[June 2024]</span> I will be presenting my project on Kaggle AI competition this September.
+                    <span class="news-date">June 2024</span> I will be presenting my project on Kaggle AI competition this September.
                 </li>
                 <li class="news-item">
-                    <span class="news-date">[June 2022]</span> I will be presenting my project on Kaggle AI competition this September.
+                    <span class="news-date">June 2022</span> I will be presenting my project on Kaggle AI competition this September.
                 </li>
                 <li class="news-item">
-                    <span class="news-date">[June 2022]</span> I will be presenting my project on Kaggle AI competition this September.
+                    <span class="news-date">June 2022</span> I will be presenting my project on Kaggle AI competition this September.
                 </li>
                 <li class="news-item">
-                    <span class="news-date">[June 2022]</span> I will be presenting my project on Kaggle AI competition this September.
+                    <span class="news-date">June 2022</span> I will be presenting my project on Kaggle AI competition this September.
                 </li>
                 <li class="news-item">
-                    <span class="news-date">[June 2022]</span> I will be presenting my project on Kaggle AI competition this September.
+                    <span class="news-date">June 2022</span> I will be presenting my project on Kaggle AI competition this September.
                 </li>
 
                 <!-- Add more news items for 2024 as needed -->
         
                 <li class="news-year">2023</li>
                 <li class="news-item">
-                    <span class="news-date">[September 2023]</span> Published a new article on Medium.
+                    <span class="news-date">September 2023</span> Published a new article on Medium.
                 </li>
                 <li class="news-item">
-                    <span class="news-date">[August 2024]</span> Invited to speak at a conference.
+                    <span class="news-date">August 2024</span> Invited to speak at a conference.
                 </li>
                 <li class="news-item">
-                    <span class="news-date">[August 2024]</span> Invited to speak at a conference.
+                    <span class="news-date">August 2024</span> Invited to speak at a conference.
                 </li>
                 <li class="news-item">
-                    <span class="news-date">[August 2024]</span> Invited to speak at a conference.
+                    <span class="news-date">August 2024</span> Invited to speak at a conference.
                 </li>
                 <li class="news-item">
-                    <span class="news-date">[August 2024]</span> Invited to speak at a conference.
+                    <span class="news-date">August 2024</span> Invited to speak at a conference.
                 </li>
                 <li class="news-item">
-                    <span class="news-date">[August 2024]</span> Invited to speak at a conference.
-                </li>
+                    <span class="news-date">August 2024</span> Invited to speak at a conference.
+                </li
                 <!-- Add more news items for 2023 as needed -->
                 <li class="news-year">2022</li>
                 <li class="news-item"> <!-- Add 'news-item' class to each list item -->
-                    <span class="news-date">[May 2022]</span> Started working on AI Financial Advisor <a href="/Projects">SenFAI</a>.
+                    <span class="news-date">May 2022</span> Started working on AI Financial Advisor <a href="/Projects">SenFAI</a>.
                 </li>
                 <li class="news-item">
-                    <span class="news-date">[June 2022]</span> I will be presenting my project on Kaggle AI competition this September.
+                    <span class="news-date">June 2022</span> I will be presenting my project on Kaggle AI competition this September.
                 </li>
                 <li class="news-item">
-                    <span class="news-date">[June 2022]</span> I will be presenting my project on Kaggle AI competition this September.
+                    <span class="news-date">June 2022</span> I will be presenting my project on Kaggle AI competition this September.
                 </li>
             </ul>
             <p class="full-news-toggle"><a href="#" id="full-news-toggle"><i>[Full list of News]</i></a></p>
