--- a/projects/index.html
+++ b/projects/index.html
@@ -24,7 +24,7 @@
      gtag('config', 'G-QCR8R9EEF9');
     </script>
     
-    <link rel="stylesheet" href="/razibit.github.io/css/pstyle.css">
+    <link rel="stylesheet" href="https://razibit.github.io/css/pstyle.css">
     
 </head>
 
