updated all index.html files

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="left-sidebar">
             <img src="images/rajib_dab.jpg" alt="Rajib Dab" class="profile-pic">
             <h2>Rajib Dab</h2>
-            <p>Student<br>Department of Computer Science & Engineering<br>Metropolitan University Bangladesh</p>
+            <p>CS Undergrad<br>Department of Computer Science & Engineering<br>Metropolitan University Bangladesh</p>
 
             <p><img src="/assets/icons/social_icons/email.png" alt="Email Icon" class="icon"> rdb99 (at) gmail (dot) com</p>
             <p><img src="/assets/icons/social_icons/location.png" alt="Location Icon" class="icon"> Sylhet, Bangladesh</p>
@@ -84,8 +84,9 @@
 
             <div class="section">
                 <h3>Research Interest</h3>
-                <p>Natural Language Processing</p>
                 <p>Computer Vision</p>
+                <p>Natural Language Processing</p>
+                
             </div>
             <div class="section">
                 <h3>Spotlight!</h3>
