--- a/experience/index.html
+++ b/experience/index.html
@@ -55,7 +55,7 @@
         <div class="left-sidebar">
             <img src="/images/rajib_dab.jpg" alt="Rajib Dab" class="profile-pic">
             <h2>Rajib Dab</h2>
-            <p>Student<br>Department of Computer Science & Engineering<br>Metropolitan University Bangladesh</p>
+            <p>CS Undergrad<br>Department of Computer Science & Engineering<br>Metropolitan University Bangladesh</p>
 
             <p><img src="/assets/icons/social_icons/email.png" alt="Email Icon" class="icon"> rdb99 (at) gmail (dot) com</p>
             <p><img src="/assets/icons/social_icons/location.png" alt="Location Icon" class="icon"> Sylhet, Bangladesh</p>
@@ -82,8 +82,9 @@
 
             <div class="section">
                 <h3>Research Interest</h3>
-                <p>Natural Language Processing</p>
                 <p>Computer Vision</p>
+                <p>Natural Language Processing</p>
+                
             </div>
             <div class="section">
                 <h3>Spotlight!</h3>
