updated all files

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="https://razibit.github.io" class="nav-link">Home</a></li>
+                    <li><a href="/" class="nav-link">Home</a></li>
                     <li><a href="projects" class="nav-link">Projects</a></li>
                     <li><a href="publications" class="nav-link">Publications</a></li>
                     <li><a href="blog" class="nav-link">Blog</a></li>
@@ -59,25 +59,25 @@
             <h2>Rajib Dab</h2>
             <p>CS Undergrad<br>Department of Computer Science & Engineering<br>Metropolitan University Bangladesh</p>
 
-            <p><img src="/assets/icons/social_icons/email.png" alt="Email Icon" class="icon"> rdb99 (at) gmail (dot) com</p>
+            <p><img src="/assets/icons/social_icons/email.png" alt="Email Icon" class="icon">razibdev7(at)gmail(dot)com</p>
             <p><img src="/assets/icons/social_icons/location.png" alt="Location Icon" class="icon"> Sylhet, Bangladesh</p>
     <div class="social-links">
         <a href="https://linkedin.com/in/rajibdab" class="social-icon">
             <img src="/assets/icons/social_icons/linkedin.png" alt="LinkedIn Icon" class="icon">
         </a>
-        <a href="https://x.com/razibit" class="social-icon">
+        <a href="https://x.com/ups01v3" class="social-icon">
             <img src="/assets/icons/social_icons/x.png" alt="X Icon" class="icon">
         </a>
         <a href="https://github.com/razibit" class="social-icon">
             <img src="/assets/icons/social_icons/github.png" alt="GitHub Icon" class="icon">
         </a>
-        <a href="https://researchgate.net/profile/yourprofile" class="social-icon">
+        <a href="https://www.researchgate.net/profile/Rajib-Dab" class="social-icon">
             <img src="/assets/icons/social_icons/researchgate.png" alt="ResearchGate Icon" class="icon">
         </a>
-        <a href="https://dblp.org/pers/hd/yourprofile" class="social-icon">
+        <a href="/" class="social-icon">
             <img src="/assets/icons/social_icons/dblp.png" alt="DBLP Icon" class="icon">
         </a>
-        <a href="https://orcid.org/yourprofile" class="social-icon">
+        <a href="https://orcid.org/0009-0003-9057-1711" class="social-icon">
             <img src="/assets/icons/social_icons/orcid.png" alt="ORCID Icon" class="icon">
         </a>
     </div>
