--- a/projects/index.html
+++ b/projects/index.html
@@ -104,7 +104,7 @@
             </div>
             <div class="publication-details">
                 <div class="project-status">Ongoing</div>
-                <a href="link-to-paper" class="paper-title">How well do Transformer models perform?</a>
+                <a href="/projects/AI-Powered-Real-Time-Altitude-Tracking-for-Sports-Performance-Analysis/" class="paper-title">AI-Powered Real-Time Altitude Tracking System for Sports</a>
                 <div class="buttons">
                     <button class="expandable-button" data-target="bibtex1">Website</button>
                     <button class="expandable-button" data-target="abstract1">Summary</button>
