--- a/projects/AI-Powered-Real-Time-Altitude-Tracking-for-Sports-Performance-Analysis/index.html
+++ b/projects/AI-Powered-Real-Time-Altitude-Tracking-for-Sports-Performance-Analysis/index.html
@@ -99,9 +99,12 @@
             <h3><strong>Research Idea Proposal: AI-Powered Real-Time Altitude Tracking for Sports Performance Analysis</strong></h3>
 
 <hr>
-<div class="image-container"></div>
-    <img src="/projects/AI-Powered-Real-Time-Altitude-Tracking-for-Sports-Performance-Analysis/AI-Powered-Real-Time-Altitude-Tracking-for-Sports-Performance-Analysis.png" alt="Description of the image">
+
+<!-- Inside your main-content div or wherever appropriate -->
+<div class="image-container">
+    <img src="/projects/AI-Powered-Real-Time-Altitude-Tracking-for-Sports-Performance-Analysis/AI-Powered-Real-Time-Altitude-Tracking-for-Sports-Performance-Analysis.png" alt="Description of Image">
 </div>
+
 <h4><strong>1. Choose Your Topic:</strong></h4>
 <p><strong>Topic:</strong><br>
 "AI-Powered Real-Time Altitude Tracking System for Sports: A Case Study with Cricket Balls"</p>
