--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
         <link href="https://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet" type="text/css">
 
 	    <meta name="author" content="Rajib Dab">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
         <link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
         <link rel="shortcut icon" href="/assets/icons/favicon.ico" type="image/x-icon">
 
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>My Academic Personal Website</title>
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-QCR8R9EEF9"></script>
@@ -36,7 +35,12 @@
             <div class="logo">
                 <a href="/">Rajib Dab/ রাজিব দেব</a>
             </div>
-            <nav>
+            <div class="menu-toggle" id="mobile-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <nav id="nav-menu">
                 <ul>
                     <li><a href="/" class="nav-link">Home</a></li>
                     <li><a href="projects" class="nav-link">Projects</a></li>
@@ -164,6 +168,6 @@
     <footer>
         <p>&copy; 2024 Rajib Dab | Last Update: August 2024</p>
     </footer>
-    <script src="js/scripts.js"></script>
+    <script src="js/scripts.js" defer></script>
 </body>
 </html>
