--- a/projects/index.html
+++ b/projects/index.html
@@ -2,17 +2,16 @@
 <html lang="en">
 <head>
     <title>Rajib Dab</title>
-        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-	    <meta property="og:title" content="Rajib Dab" />
-	    <meta property="og:image" content="https://razibit.github.io/img/rajib_dab.jpg" />
-	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <link href="https://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet" type="text/css">
-	    <meta name="author" content="Rajib Dab">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
-        <link rel="shortcut icon" href="/assets/icons/favicon.ico" type="image/x-icon">
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <meta property="og:title" content="Rajib Dab" />
+    <meta property="og:image" content="https://razibit.github.io/img/rajib_dab.jpg" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link href="https://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet" type="text/css">
+    <meta name="author" content="Rajib Dab">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
+    <link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/assets/icons/favicon.ico" type="image/x-icon">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Academic Personal Website</title>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-QCR8R9EEF9"></script>
@@ -28,15 +27,18 @@
     
 </head>
 
-
-
 <body>
     <header>
         <div class="container">
             <div class="logo">
                 <a href="/">Rajib Dab/ রাজিব দেব</a>
             </div>
-            <nav>
+            <div class="menu-toggle" id="mobile-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <nav id="nav-menu">
                 <ul>
                     <li><a href="/" class="nav-link">Home</a></li>
                     <li><a href="/projects" class="nav-link">Projects</a></li>
@@ -50,8 +52,6 @@
             </nav>
         </div>
     </header>
-
-      <!--temporary method of spacing-->
 
     <main class="container">
         <div class="left-sidebar">
@@ -155,8 +155,8 @@
     <!-- footer -->
 
     <footer>
-        <p>&copy; 2024 Rajib Dab | Last Update: July 2024</p>
+        <p>&copy; 2024 Rajib Dab | Last Update: August 2024</p>
     </footer>
-    <script src="https://razibit.github.io/js/scripts.js"></script>
+    <script src="/js/responsive.js" defer></script>
 </body>
 </html>
