update README and education.html

--- a/education.html
+++ b/education.html
@@ -424,7 +424,7 @@
             <div class="education-timeline">
                 <div class="education-card">
                     <div class="education-header">
-                        <img src="/images/Metropolitan_university.png" alt="Metropolitan University Bangladesh" class="education-logo">
+                        <img src="/images/MU_Logo.png" alt="Metropolitan University Bangladesh" class="education-logo">
                         <div class="education-details">
                             <h2>Metropolitan University Bangladesh</h2>
                             <span class="education-period">Jan, 2023 - Dec, 2026</span>
