Use relative paths for favicon and profile image
Convert absolute asset paths to relative paths to avoid 404s when the site is hosted from a subpath. Updated index.html (favicon href '/favicon.svg' -> './favicon.svg') and src/components/About.jsx (image src '/images/rajib_dab.jpg' -> 'images/rajib_dab.jpg').

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Portfolio of Rajib Dab — AI Engineering Student, Founder @ Apostrophe Labs, Dataset Creator, and Aspiring AI Researcher."
     />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
